# terminal_watch

./: README.md  project_prompt.txt  pyproject.toml
docs/superpowers/plans/: 2026-04-09-terminal-bouncer.md
terminal_bouncer/: __main__.py  audit.py  classifier.py  config.py  decision_engine.py  execution_controller.py  guard.py  hasher.py  llm_client.py  logger.py  retry.py  rule_engine.py  validator.py
tests/: conftest.py  test_audit.py  test_classifier.py  test_config.py  test_decision_engine.py  test_execution_controller.py  test_guard.py  test_hasher.py  test_llm_client.py  test_logger.py  test_main.py  test_retry.py  test_rule_engine.py  test_validator.py
